[gd_scene load_steps=2 format=3 uid="uid://bmc8qgeccqy5m"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/MultiItemCollapsible/MultiItemCollapsible.gd" id="1_55acr"]

[node name="MultiItemCollapsible" type="BoxContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_55acr")

[node name="text_button" type="Button" parent="."]
layout_mode = 2

[node name="Place_child_nodes_here" type="BoxContainer" parent="."]
layout_mode = 2

[connection signal="pressed" from="text_button" to="." method="toggle"]
